--- a/EventTrackerWebApp/public_html/index.html
+++ b/EventTrackerWebApp/public_html/index.html
@@ -30,7 +30,41 @@
             <div class="main">
                 <p id="wlc-text" class="text-center jumbotron"> <strong>Službena web stranica Event Tracker aplikacije - dobrodošli! </strong></p>
                 <div class="content-container col-lg-8 col-lg-offset-2">
-                    <img class="big-img img-thumbnail" src="img/eventtracker_mob.png"/>
+                    <div id ="cont" class="container">
+                        <div class="col-lg-8">
+                            <div class="carousel slide" id="myCarousel">
+                                <div class="carousel-inner">
+                                    <div class="item active">
+                                      <div class="col-lg-4 col-xs-4 col-md-4 col-sm-4">
+                                      <a href="#"><img src="img/et_mob_1.png" class="img-responsive">Početni screen</a></div>
+                                    </div>
+                                    <div class="item">
+                                      <div class="col-lg-4 col-xs-4 col-md-4 col-sm-4">
+                                      <a href="#"><img src="img/et_mob_2.JPG" class="img-responsive">Navigation drawer</a></div>
+                                    </div>
+                                    <div class="item">
+                                      <div class="col-lg-4 col-xs-4 col-md-4 col-sm-4">
+                                      <a href="#"><img src="img/et_mob_3.JPG" class="img-responsive">Lista blagdana</a></div>
+                                    </div>
+                                    <div class="item">
+                                      <div class="col-lg-4 col-xs-4 col-md-4 col-sm-4">
+                                      <a href="#"><img src="img/et_mob_4.JPG" class="img-responsive">Odbrojavanje</a></div>
+                                    </div>
+                                    <div class="item">
+                                      <div class="col-lg-4 col-xs-4 col-md-4 col-sm-4">
+                                      <a href="#"><img src="img/et_mob_5.JPG" class="img-responsive">Dodavanje blagdana</a></div>
+                                    </div>
+                                    <div class="item">
+                                      <div class="col-lg-4 col-xs-4 col-md-4 col-sm-4">
+                                      <a href="#"><img src="img/et_mob_6.JPG" class="img-responsive">Prijava</a></div>
+                                    </div>
+                              </div>
+                              <a class="left carousel-control" href="#myCarousel" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
+                              <a class="right carousel-control" href="#myCarousel" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
                     <p>GitHub link repozitorija: <br> <strong> https://github.com/dalkofjac/Project-EventTracker </strong></p>
                     <button id="git-button" class="git-btn btn btn-danger btn-lg float-left submit-button">Odvedi me na GitHub</button>
                 </div>
