Ažuriran picture showcase i contact html
- napravljen novi picture showcase
- napisan javascript za citanje korisnikova inputa u contact.html-u

--- a/EventTrackerWebApp/public_html/about.html
+++ b/EventTrackerWebApp/public_html/about.html
@@ -39,6 +39,7 @@
                             <li> Podsjeća korisnike na nadolazeće blagdane </li>
                             <li> Podsjeća korisnike na nadolazeće rođendane </li>
                             <li> Podsjeća korisnike na nadolazeće događaje koje sami odrede </li>
+                            <li> Omogućava odbrojavanje vremena (sati/min/sec) to događaja </li>
                             <li> Omogućuje prijavu nakon koje se omogućava spremanje 'privatnih događaja'</li>
                             <li> I još mnogo toga.... </li>
                         </ul>
