--- a/EventTrackerWebApp/public_html/contact.html
+++ b/EventTrackerWebApp/public_html/contact.html
@@ -33,22 +33,22 @@
                         <img src="img/mail.png" class="img img-circle img-mail"/>
                         <div class="form-group">
                             <label>Vaše ime:</label>
-                            <input class="form-control"/>
+                            <input id="usersName" class="form-control"/>
                             <span class="text-muted"></span>
                         </div>
                         <div class="form-group">
                             <label>Vaš email:</label>
-                            <input type="email" class="form-control"/>
+                            <input id="usersEmail" type="email" class="form-control"/>
                             <span class="text-muted"></span>
                         </div>
                         <div class="form-group">
                             <label>Poruka:</label>
-                            <textarea cols="40" rows="4" class="form-control"></textarea>
+                            <textarea id="usersMsg" cols="40" rows="4" class="form-control"></textarea>
                             <span class="text-muted"></span>
                         </div>
                         <div>
                             <a class="btn btn-default btn-lg" href="./index.html">Odustani</a>
-                            <input type="submit" value="Pošalji poruku" class="btn btn-danger btn-lg" />
+                            <button id="submitBtn" class="btn btn-danger btn-lg">Pošalji poruku</button>
                         </div>
                     </form>
                 </div>
