--- a/EventTrackerWebApp/public_html/index.html
+++ b/EventTrackerWebApp/public_html/index.html
@@ -29,43 +29,62 @@
         <div class="wrapper">
             <div class="main">
                 <p id="wlc-text" class="text-center jumbotron"> <strong>Službena web stranica Event Tracker aplikacije - dobrodošli! </strong></p>
-                <div class="content-container col-lg-8 col-lg-offset-2">
-                    <div id ="cont" class="container">
-                        <div class="col-lg-8">
-                            <div class="carousel slide" id="myCarousel">
-                                <div class="carousel-inner">
-                                    <div class="item active">
-                                      <div class="col-lg-4 col-xs-4 col-md-4 col-sm-4">
-                                      <a href="#"><img src="img/et_mob_1.png" class="img-responsive">Početni screen</a></div>
+                <div class="content-container col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
+                    <div class="container">
+                        <div class='row'>
+                            <div class="col-lg-8 col-lg-offset-3 col-md-8 col-md-offset-3 col-sm-8 col-sm-offset-3">
+                                <div class="carousel slide media-carousel" id="media">
+                                    <div class="carousel-inner">
+                                        <div class="item  active">
+                                            <div class="row">
+                                                <div class="col-lg-4 col-md-4 col-sm-4">
+                                                    <a class="thumbnail slide-img" href="#"><img alt="main screen" src="img/et_mob_1.png"></a>
+                                                </div>         
+                                            </div>
+                                        </div>
+                                        <div class="item">
+                                            <div class="row">
+                                                <div class="col-lg-4 col-md-4 col-sm-4">
+                                                    <a class="thumbnail slide-img" href="#"><img alt="navigation drawer" src="img/et_mob_2.JPG"></a>
+                                                </div>         
+                                            </div>
+                                        </div>
+                                        <div class="item">
+                                            <div class="row">
+                                                <div class="col-lg-4 col-md-4 col-sm-4">
+                                                    <a class="thumbnail slide-img" href="#"><img alt="holidays" src="img/et_mob_3.JPG"></a>
+                                                </div>         
+                                            </div>
+                                        </div>
+                                        <div class="item">
+                                            <div class="row">
+                                                <div class="col-lg-4 col-md-4 col-sm-4">
+                                                    <a class="thumbnail slide-img" href="#"><img alt="time until holiday" src="img/et_mob_4.JPG"></a>
+                                                </div>         
+                                            </div>
+                                        </div>
+                                        <div class="item">
+                                            <div class="row">
+                                                <div class="col-lg-4 col-md-4 col-sm-4">
+                                                    <a class="thumbnail slide-img" href="#"><img alt="adding new event" src="img/et_mob_5.JPG"></a>
+                                                </div>         
+                                            </div>
+                                        </div>
+                                        <div class="item">
+                                            <div class="row">
+                                                <div class="col-lg-4 col-md-4 col-sm-4">
+                                                    <a class="thumbnail slide-img" href="#"><img alt="login screen" src="img/et_mob_6.JPG"></a>
+                                                </div>         
+                                            </div>
+                                        </div>
                                     </div>
-                                    <div class="item">
-                                      <div class="col-lg-4 col-xs-4 col-md-4 col-sm-4">
-                                      <a href="#"><img src="img/et_mob_2.JPG" class="img-responsive">Navigation drawer</a></div>
-                                    </div>
-                                    <div class="item">
-                                      <div class="col-lg-4 col-xs-4 col-md-4 col-sm-4">
-                                      <a href="#"><img src="img/et_mob_3.JPG" class="img-responsive">Lista blagdana</a></div>
-                                    </div>
-                                    <div class="item">
-                                      <div class="col-lg-4 col-xs-4 col-md-4 col-sm-4">
-                                      <a href="#"><img src="img/et_mob_4.JPG" class="img-responsive">Odbrojavanje</a></div>
-                                    </div>
-                                    <div class="item">
-                                      <div class="col-lg-4 col-xs-4 col-md-4 col-sm-4">
-                                      <a href="#"><img src="img/et_mob_5.JPG" class="img-responsive">Dodavanje blagdana</a></div>
-                                    </div>
-                                    <div class="item">
-                                      <div class="col-lg-4 col-xs-4 col-md-4 col-sm-4">
-                                      <a href="#"><img src="img/et_mob_6.JPG" class="img-responsive">Prijava</a></div>
-                                    </div>
-                              </div>
-                              <a class="left carousel-control" href="#myCarousel" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
-                              <a class="right carousel-control" href="#myCarousel" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
+                                    <a data-slide="prev" href="#media" class="left carousel-control">‹</a>
+                                    <a data-slide="next" href="#media" class="right carousel-control">›</a>
+                                </div>                          
                             </div>
                         </div>
                     </div>
-                    <br>
-                    <p>GitHub link repozitorija: <br> <strong> https://github.com/dalkofjac/Project-EventTracker </strong></p>
+                    <p id="git-text">GitHub link repozitorija: <br> <strong> https://github.com/dalkofjac/Project-EventTracker </strong></p>
                     <button id="git-button" class="git-btn btn btn-danger btn-lg float-left submit-button">Odvedi me na GitHub</button>
                 </div>
             </div>
