Mala izmjena picture showcase-a
- popravljen dizajn picture showcase-a na velikim monitorima (dodane sve
dimenzije)

--- a/EventTrackerWebApp/public_html/index.html
+++ b/EventTrackerWebApp/public_html/index.html
@@ -29,63 +29,63 @@
         <div class="wrapper">
             <div class="main">
                 <p id="wlc-text" class="text-center jumbotron"> <strong>Službena web stranica Event Tracker aplikacije - dobrodošli! </strong></p>
-                <div class="content-container col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
-                    <div class="container">
+                <div class="content-container col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-2">
+                    <div class="container-slides col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-2">
                         <div class='row'>
-                            <div class="col-lg-8 col-lg-offset-3 col-md-8 col-md-offset-3 col-sm-8 col-sm-offset-3">
-                                <div class="carousel slide media-carousel" id="media">
-                                    <div class="carousel-inner">
-                                        <div class="item  active">
-                                            <div class="row">
-                                                <div class="col-lg-4 col-md-4 col-sm-4">
-                                                    <a class="thumbnail slide-img" href="#"><img alt="main screen" src="img/et_mob_1.png"></a>
-                                                </div>         
-                                            </div>
-                                        </div>
-                                        <div class="item">
-                                            <div class="row">
-                                                <div class="col-lg-4 col-md-4 col-sm-4">
-                                                    <a class="thumbnail slide-img" href="#"><img alt="navigation drawer" src="img/et_mob_2.JPG"></a>
-                                                </div>         
-                                            </div>
-                                        </div>
-                                        <div class="item">
-                                            <div class="row">
-                                                <div class="col-lg-4 col-md-4 col-sm-4">
-                                                    <a class="thumbnail slide-img" href="#"><img alt="holidays" src="img/et_mob_3.JPG"></a>
-                                                </div>         
-                                            </div>
-                                        </div>
-                                        <div class="item">
-                                            <div class="row">
-                                                <div class="col-lg-4 col-md-4 col-sm-4">
-                                                    <a class="thumbnail slide-img" href="#"><img alt="time until holiday" src="img/et_mob_4.JPG"></a>
-                                                </div>         
-                                            </div>
-                                        </div>
-                                        <div class="item">
-                                            <div class="row">
-                                                <div class="col-lg-4 col-md-4 col-sm-4">
-                                                    <a class="thumbnail slide-img" href="#"><img alt="adding new event" src="img/et_mob_5.JPG"></a>
-                                                </div>         
-                                            </div>
-                                        </div>
-                                        <div class="item">
-                                            <div class="row">
-                                                <div class="col-lg-4 col-md-4 col-sm-4">
-                                                    <a class="thumbnail slide-img" href="#"><img alt="login screen" src="img/et_mob_6.JPG"></a>
-                                                </div>         
-                                            </div>
+                            <div class="carousel slide media-carousel col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-2" id="media">
+                                <div class="carousel-inner col-lg-8 col-md-8 col-sm-8 col-xs-8">
+                                    <div class="item  active">
+                                        <div class="row">
+                                            <div>
+                                                <a class="thumbnail"><img alt="main screen" src="img/et_mob_1.png"></a>
+                                            </div>         
                                         </div>
                                     </div>
-                                    <a data-slide="prev" href="#media" class="left carousel-control">‹</a>
-                                    <a data-slide="next" href="#media" class="right carousel-control">›</a>
-                                </div>                          
-                            </div>
+                                    <div class="item">
+                                        <div class="row">
+                                            <div>
+                                                <a class="thumbnail"><img alt="navigation drawer" src="img/et_mob_2.JPG"></a>
+                                            </div>         
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="row">
+                                            <div>
+                                                <a class="thumbnail"><img alt="holidays" src="img/et_mob_3.JPG"></a>
+                                            </div>         
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="row">
+                                            <div>
+                                                <a class="thumbnail"><img alt="time until holiday" src="img/et_mob_4.JPG"></a>
+                                            </div>         
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div>
+                                            <div>
+                                                <a class="thumbnail"><img alt="adding new event" src="img/et_mob_5.JPG"></a>
+                                            </div>         
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="row">
+                                            <div>
+                                                <a class="thumbnail"><img alt="login screen" src="img/et_mob_6.JPG"></a>
+                                            </div>         
+                                        </div>
+                                    </div>
+                                </div>
+                                <a data-slide="prev" href="#media" class="left carousel-control">‹</a>
+                                <a data-slide="next" href="#media" class="right carousel-control">›</a>
+                            </div>                          
                         </div>
                     </div>
-                    <p id="git-text">GitHub link repozitorija: <br> <strong> https://github.com/dalkofjac/Project-EventTracker </strong></p>
-                    <button id="git-button" class="git-btn btn btn-danger btn-lg float-left submit-button">Odvedi me na GitHub</button>
+                    <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-2">
+                        <p id="git-text">GitHub link repozitorija: <br> <strong> https://github.com/dalkofjac/Project-EventTracker </strong></p>
+                        <button id="git-button" class="git-btn btn btn-danger btn-lg float-left submit-button">Odvedi me na GitHub</button>
+                    </div>
                 </div>
             </div>
             <div class="footer">
